[package]
name = "asterusk"
version = "0.1.0"
authors = ["niniack <nsa325@nyu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.6"
ndarray = "0.13.1"
ndarray-stats = "0.3"
ndarray-image = "0.2.1"
rustfft = "3.0.1"
fastblur = { git = "https://github.com/fschutt/fastblur" }
transpose = "0.1"
